Move the rework test in the actual test directory (before in the main function).